@@ -1,6 +1,9 @@
 # version 0.61.4
 14/11/2018
    - Integrated lite and full services and controllers in core (margaretha)
+21/11/2018
+   - Updated OAuth2 refresh token request to create a new refresh token and 
+     revoke the old one per request (margaretha)   
    
 # version 0.61.3
 17/10/2018
